--- a/examples/03_Build_an_Embeddings_index_from_a_data_source.ipynb
+++ b/examples/03_Build_an_Embeddings_index_from_a_data_source.ipynb
@@ -378,11 +378,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "TLVOTQJchvTi"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at NeuML/bert-small-cord19qa were not used when initializing BertForQuestionAnswering: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing BertForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
     "%%capture\n",
     "from txtai.pipeline import Extractor\n",
@@ -393,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -427,19 +437,27 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>Work-related and Personal Factors Associated with Mental Well-being during COVID-19 Response: A Survey of Health Care and Other Workers</td>\n",
-       "      <td>2020-06-11 00:00:00</td>\n",
-       "      <td>http://medrxiv.org/cgi/content/short/2020.06.09.20126722v1?rss=1</td>\n",
-       "      <td>Poor family supportive behaviors by supervisors were also associated with these outcomes [1.40 (1.21 - 1.62), 1.69 (1.48 - 1.92), 1.54 (1.44 - 1.64)].</td>\n",
-       "      <td>Poor family supportive behaviors</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <td>No evidence that androgen regulation of pulmonary TMPRSS2 explains sex-discordant COVID-19 outcomes</td>\n",
        "      <td>2020-04-21 00:00:00</td>\n",
        "      <td>https://doi.org/10.1101/2020.04.21.051201</td>\n",
        "      <td>In addition to male sex, smoking is a risk factor for COVID-19 susceptibility and poor clinical outcomes .</td>\n",
-       "      <td>Higher morbidity and mortality</td>\n",
+       "      <td>susceptibility and poor clinical outcomes</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Prevalence and Impact of Myocardial Injury in Patients Hospitalized with COVID-19 Infection</td>\n",
+       "      <td>2020-04-24 00:00:00</td>\n",
+       "      <td>http://medrxiv.org/cgi/content/short/2020.04.20.20072702v1?rss=1</td>\n",
+       "      <td>This risk was consistent across patients stratified by history of CVD, risk factors but no CVD, and neither CVD nor risk factors.</td>\n",
+       "      <td>Inflammatory markers were higher</td>\n",
+       "      <td>Mount Sinai Health System (MSHS) in New York City</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hydroxychloroquine treatment in COVID‐19: a descriptive observational analysis of 30 cases from a single center in Wuhan, China</td>\n",
+       "      <td>2020-06-17 00:00:00</td>\n",
+       "      <td>https://doi.org/10.1002/jmv.26193</td>\n",
+       "      <td>Hypertension Others 15(30.0) 8(26.7) 5(50.0) 4(40.0) 10(50.0) 4(20.0) 1.00 0.243</td>\n",
+       "      <td>moderately ill</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -447,15 +465,7 @@
        "      <td>2020-04-22 00:00:00</td>\n",
        "      <td>https://doi.org/10.1016/j.bbi.2020.04.046</td>\n",
        "      <td>There was no difference on 28-day mortality between heparin users and nonusers.</td>\n",
-       "      <td>elicited strong inflammatory responses are favorable or detrimental</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>COVID-19: what has been learned and to be learned about the novel coronavirus disease</td>\n",
-       "      <td>2020-03-15 00:00:00</td>\n",
-       "      <td>https://doi.org/10.7150/ijbs.45134</td>\n",
-       "      <td>• Three major risk factors for COVID-19 were sex (male), age (≥60), and severe pneumonia.</td>\n",
-       "      <td>sex (male), age (≥60), and severe pneumonia</td>\n",
+       "      <td>severely ill</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
