--- a/examples/38_Introducing_the_Semantic_Graph.ipynb
+++ b/examples/38_Introducing_the_Semantic_Graph.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "SoA2HSIAr7Fb"
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -417,10 +417,10 @@
     {
      "data": {
       "text/plain": [
-       "1919"
+       "1903"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -445,14 +445,14 @@
     {
      "data": {
       "text/plain": [
-       "['kerry_john_bush_president',\n",
-       " 'sox_red_boston_series',\n",
-       " 'oil_opec_prices_said',\n",
-       " 'dollar_reuters_against_euro',\n",
-       " 'darfur_sudan_region_said']"
+       "['john_kerry_bush_president',\n",
+       " 'arafat_yasser_palestinian_leader',\n",
+       " 'oil_prices_crude_barrel',\n",
+       " 'dollar_reuters_u.s_against',\n",
+       " 'oil_opec_prices_said']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -521,11 +521,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Politics & Government kerry_john_bush_president\n",
-      "Sports sox_red_boston_series\n",
-      "Business & Finance oil_opec_prices_said\n",
-      "Business & Finance dollar_reuters_against_euro\n",
-      "Politics & Government darfur_sudan_region_said\n"
+      "Politics & Government john_kerry_bush_president\n",
+      "Politics & Government arafat_yasser_palestinian_leader\n",
+      "Business & Finance oil_prices_crude_barrel\n",
+      "Business & Finance dollar_reuters_u.s_against\n",
+      "Business & Finance oil_opec_prices_said\n"
      ]
     }
    ],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -617,11 +617,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peoplesoft_oracle_takeover_bid (442)\n",
-      "darfur_sudan_region_said (4)\n",
-      "windows_microsoft_xp_service (12)\n",
-      "fallujah_us_city_iraqi (24)\n",
-      "eclipse_lunar_moon_total (615)\n"
+      "peoplesoft_oracle_s_39 (323)\n",
+      "fallujah_us_city_iraqi (23)\n",
+      "sudan_darfur_government_sudanese (573)\n",
+      "windows_xp_service_pack (28)\n",
+      "eclipse_lunar_moon_total (617)\n"
      ]
     }
    ],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "sxSKqhPd5AIa"
    },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -709,7 +709,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
