--- a/tests/bm25_topic.ipynb
+++ b/tests/bm25_topic.ipynb
@@ -38,7 +38,7 @@
     "try:\n",
     "    conn = mariadb.connect(\n",
     "        user=\"kardec\",\n",
-    "        password=\"ak2019\",\n",
+    "        password=\"\",\n",
     "        host=\"localhost\",\n",
     "        port=3306,\n",
     "        database=\"kardec_db\"\n",
@@ -1227,7 +1227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
